--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,21 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.3.72"
+    ext{
+        kotlin_version = "1.4.21"
+        hiltVersion = '2.28.3-alpha'
+        hiltViewModelVersion = '1.0.0-alpha03'
+        retrofitVersion = "2.9.0"
+        gsonVersion = "2.8.6"
+        fragmentKtxVersion = "1.2.5"
+        navigationVersion = '2.3.3'
+        lifecycle_version = "2.2.0"
+        rxVersion = "2.1.1"
+        glideVersion = "4.11.0"
+        junitVersion = "4.13.1"
+        mockkVersion = "1.10.5"
+        androidXTestVersion = "1.3.0"
+        archTestingVersion = "2.1.0"
+    }
     repositories {
         google()
         jcenter()
@@ -8,7 +23,8 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltVersion"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
