--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$rootProject.lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$rootProject.lifecycle_version"
     implementation "android.arch.lifecycle:extensions:$rootProject.lifecycle_version"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     //Unit test
     testImplementation "junit:junit:$rootProject.junitVersion"
