--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,8 +55,8 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:$rootProject.fragmentKtxVersion"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$rootProject.lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$rootProject.lifecycle_version"
-    implementation "android.arch.lifecycle:extensions:$rootProject.lifecycle_version"
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+//    implementation "android.arch.lifecycle:extensions:$rootProject.lifecycle_version"
+//    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     //Unit test
     testImplementation "junit:junit:$rootProject.junitVersion"
